src/StdSelect/StdSelect_ViewerSelector3d.cxx
@@ -206,7 +206,7 @@ void StdSelect_ViewerSelector3d::DisplaySensitive (const Handle(V3d_View)& theVi
 
     Handle(Graphic3d_Structure) aStruct = new Graphic3d_Structure (theView->Viewer()->StructureManager());
 
-    if (!anObj->TransformPersistence().Flags || (anObj->TransformPersistence().Flags & Graphic3d_TMF_2d))
+    if (anObj->TransformPersistence().Flags == 0)
     {
       continue;
     }
